[package]
name = "futures-compat"
version = "0.0.1"
description = "A compatibility layer between different versions of Future."
authors = ["Sean McArthur <sean@seanmonstar.com>"]
license = "MIT"

[dependencies]
futures = "0.1"
futures-core-preview = "0.2"
futures-sink-preview = "0.2"
futures-io-preview = "0.2"
tokio-io = "0.1.6"
